# ChangeLog for sys-devel/llvm
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/llvm/ChangeLog,v 1.189 2014/04/12 09:44:01 mgorny Exp $

  12 Apr 2014; Michał Górny <mgorny@gentoo.org> llvm-9999.ebuild:
  Remove the cmake hack since upstream started installing cmake files from
  Makefiles.

*llvm-3.4-r2 (10 Apr 2014)

  10 Apr 2014; Michał Górny <mgorny@gentoo.org> +llvm-3.4-r2.ebuild:
  Backport the install phase changes to masked -r2.

  10 Apr 2014; Michał Górny <mgorny@gentoo.org> llvm-9999.ebuild:
  Re-apply the install phase fixes for multilib-portage (bug #506398) and /tmp
  ownership (bug #506472). For now, just the live ebuild.

  07 Apr 2014; Michał Górny <mgorny@gentoo.org> llvm-9999.ebuild:
  Update PYTHON_COMPAT in the live ebuild.

*llvm-3.4-r1 (02 Apr 2014)

  02 Apr 2014; Julian Ospald <hasufell@gentoo.org> +llvm-3.4-r1.ebuild,
  llvm-9999.ebuild:
  revert last commit causing /usr/bin/clang being 32bit on amd64 systems

  01 Apr 2014; Michał Górny <mgorny@gentoo.org> llvm-3.4.ebuild,
  llvm-9999.ebuild:
  Use alternate root install instead of dumb removal to work-around non-clobber
  install target. Use MULTILIB_CHOST_TOOLS rather than inline code to handle
  llvm-config, bug #506398.

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> llvm-3.3-r1.ebuild,
  llvm-3.3-r3.ebuild, llvm-3.4.ebuild:
  Add support for the new PyPy slotting.

  23 Mar 2014; Agostino Sarubbo <ago@gentoo.org> llvm-3.3-r3.ebuild:
  Stable for ppc64, wrt bug #491018

  23 Mar 2014; Agostino Sarubbo <ago@gentoo.org> llvm-3.3-r3.ebuild:
  Stable for ppc, wrt bug #491018

  11 Mar 2014; Michał Górny <mgorny@gentoo.org> llvm-9999.ebuild:
  Remove unnecessary --with-clang-resource-dir that broke the build whenever the
  version number was bumped.

  05 Mar 2014; Markus Meier <maekke@gentoo.org> llvm-3.3-r3.ebuild:
  arm stable, bug #491018

  01 Mar 2014; Pacho Ramos <pacho@gentoo.org> llvm-3.3-r3.ebuild: