@@ -56,27 +56,19 @@ EBUILD llvm-3.3-r1.ebuild 12001 SHA256 c4ad8c3268cadca54cf9f003a4c325bec30ae703a
 EBUILD llvm-3.3-r3.ebuild 14223 SHA256 41dd967a26ec4b6a8b0b230ee62b25d8b8e1447d40ff02ab103485fa527a9c23 SHA512 37e9ef5381a0b9b417796c2a46932fcf273057e40e09ccc07ae03ec47992e05944c30393460cc68bffeb519974907649ee0c896f4da1e5bccc78330f9da189c3 WHIRLPOOL d75cd990229d0c297d9bd29c2efea48251959611b8f349b04debe1601a5ae569960e7f1649cb0e628dc521d3b13caa0a4c69ee5889ead58032bd6d37516a1786
 EBUILD llvm-3.3.ebuild 6798 SHA256 4e53042e76ce97e6a460cda74c5dbadc1cee9009345e8f0232e28d53c8f77579 SHA512 5513887c3b5a25a678713b68c216a40801ddecbf5a4dc58d7ad01c1ec8411589e20d8662c34f117e6d64924302504c8ce74b48f3edca1f292b56881eb6176271 WHIRLPOOL 79d6adefc281699477a271f76cb8eb7992d0946b6fcda9149a0976c30138ac882f735eff08c25c0edf37ccc8e31700f6d2d51d38c354c82c06695962e8f9243b
 EBUILD llvm-3.4-r1.ebuild 14806 SHA256 eb56a521612ee0a9ef4375d7908a7fee73950acba71006e50223a83b3927483f SHA512 391fcd8eedd6c4777db48dfd23799079e4b333b78fb8a21c3b42fd1d291edfacf56ffecf072c1b01e7b248fd913b778b547b8c885317d1efd906433b867420dc WHIRLPOOL 3650a3c0f5ea67a81cdcd1ae4f4c0e7b700c96ee37d9122b9aa357182d5ade1b10ada64ced8dd8ea2157043047a10aa538192324139bd3742026ea4f8aa071e1
-EBUILD llvm-3.4-r2.ebuild 14519 SHA256 2a02f740eb03cc219efa22b568a15791d0e36cdb0ae456ba8f83f14c639a5eb8 SHA512 d26ec40080935baf844fa61ce527aaf24ffdd30c8f15c9f4ca34fb5185fd9ecc9e140a9acd3f1b9aca1747b57f9ce36ed28ed8c864d012ab52e97bb2bcb400a9 WHIRLPOOL 2e2efb3e1340930246e55097b478ccfa1ada88b0d9f67011863d79a8d25b1f7018c1d7b1c40c9af6779b48124efc497a6bb7c96649b58ad1906069c5d648f753
+EBUILD llvm-3.4-r2.ebuild 14683 SHA256 a1c3ae8142771adf3916d5c69cbacf2f1ee7adeca10278cafc9339a43785223a SHA512 617b1d82156a0c351a612fafa87e007fb0f3d934d4dd8a68206f75ca44023d1c1e2e14ce157780a2151fe2c0db79cf626fa381733a779a4c2dd66685d487e16f WHIRLPOOL 39bd5aa84cb9e31839cb5e5a37b15c95287a6542f6c8e23aefa95d2729bc6905265dd2e90ec6b6a611a6e549d3eae9ca80384ee78a3aed7d065087ee7172ff1b
 EBUILD llvm-3.4.ebuild 14517 SHA256 89ff017e78d65e03c3334b732358a374c357c25579239ef87146436a32a58bda SHA512 0d6dc970cb65cd4ca8d6706f4993d068c753582bdfec9f23c3ad1d6343425f4b07ad1664d0a5e6dd1be9923fb11f93a629c8e690c0b7311949fa2de921a2b21f WHIRLPOOL a60dd2ffa9abc18875f4bcb263a0e494459d7a86d7a9bdf75a5d869f82e566dd0d8c1b0da203936ffd85580d77e04a641e2924239dff7e051f11954a56afa03e
-EBUILD llvm-9999.ebuild 12899 SHA256 926287db088ec2a0a672b8243749b7c0d824c370f24ccd1c0a6075f3b8c8dfc5 SHA512 5b716ba2755e4d170dbe9e834176850b90d48ebe9b06676394f0dabbbbe6f9e06af9d37c2a836601749ec19c8338f3b8abae06f99235bf4b4a7ecc5e7d6474bc WHIRLPOOL a3c59c3f4bbe507dcbd056e2fbc23092fdc93fb6c5c471d6c871f6992de0adb0c8311778842275a230b413fd80866f128f77c8e7c4fe509778e2bb529b1f5f25
-MISC ChangeLog 31360 SHA256 4cc886a0f3d9b3d952865e6e64a8567b0ead04448823945a501f2c00d73cec05 SHA512 b45b7487f7f6643fc1749241ece3b1dd115bfa725d6ea62ff72e9c8bc09aceb4d7a665a1a37a54b9f2cfdcf6abb5dccb14befdf527231b1c7aaf4a8faa7de0cb WHIRLPOOL e043423920926e1d6579db48aae50dc1ad67c592d83ab7884841261a7b272ee42160eeb2d5bf3d68a024ae4eee3cb8b588425a216fada8b36e7131ae68519c8d
+EBUILD llvm-9999.ebuild 13063 SHA256 09f97c41812a9bfeb2603844cf1d7a29562c90c14d951332c1f66955a79c9db4 SHA512 1eeecc2076d2e1db64f329f0f10548c5e8284c380be8a5d725c0c0d9f58864b5c91f5e44f385cb068bccd89a9c3febea1cdd39862e40bd5ec1e9620a266bd86a WHIRLPOOL 0024c5c38c0c97085a795bdb6093a83b6d14f8c6935b21189ff6fda9cd1ea424687d0d225b79cc32c968db84716975506cfd8f44cda100ef5e929480ee8d00b7
+MISC ChangeLog 31514 SHA256 7d9db5f61c31fb8562c97949b2719284ee90e4c75acb9e20589939752020f1fd SHA512 fb0f1a7c6cca30498d3ff8027366d7efa01d1a1cc9793612d88d46e5376b878426aa56667760ead60b9bb66bc2874cfc2cee0212c43e360f9af1a988c3f790e1 WHIRLPOOL 95bc06b550842b2aa93d333a8217c81c352f3c73c0ae6237556eda04f6f78138f029b94e746d376ca8da6be5aea30cf3a05d03d8e5ba35499c319a49435b1214
 MISC metadata.xml 2723 SHA256 d1bbe72da2553592ad60522f744b8339bce17487343abf372d966c1fe9cd163d SHA512 800f72039a5f0fdb175a8ddab7ae8f184907865802ffd5f139006f3a8c77053f114e2f7b01cef3f41f6fffb3f8f8b2b474fdf95461f27b2dc8ae31cbd732a14e WHIRLPOOL 462d3d2f22e29d3678621a9f89ed98a58ee60fde57da7be21fbca7fd61e106abbcb19c0e491424869302c19ca93b15c480cd7ca2a3181f2148174d44e891e190
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJTSQrmXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOOOsQAIiyCVBkq6GY/KJo8ryvqzE7
-8nbNcJ/qlm6c2pHWXqEyleuNI3M+UR0EAnTVbwml6RR//5+cgECEUHRWjEoFQtKW
-z76wFtU4JDLhiug43YTRd6OC0lP8DdJaEw/My7f2VL5R8ZcXq6xPKj1t+YzwXr20
-ZDPtdg9z6Pk/KDCLyYDpZjXhJeov0mLGN83cpXCp/JM/Ri1BPnkH3dhiPzXtfQkC
-q25LbL7rAwRCOqfak+oDsmtX0WRTBFWMkBMMEaHR723wJmTF4lsOa4CVo9ySo+gw
-kK0k9YaaWs1Sb1XA1XnpREaVZ0RhNNL1G6UM5b6iyd3RZfLdwDvqYIsWmpnQV/MG
-4InjEZ6bOceX6JmTKBxPuBQ1aDcrmdxlVrpM3fNkWPSaFdXLdhHeAySggf/q55av
-pmdh2/XR61rkhzZTPlb+uqOJGra1vfgbzjuWmYkwpDge5xw1vXftjcg0L4U25t71
-l5uQFTfHQJj7aa0dXrCx14RFk2n2pPLMKxNfpQSU2rwFHm6G9V2hg9qrlsgWIWIj
-iy8tGqn695EYKCBq8PLdH0nwZczuLvp5zcdjcY164SKz3P7uR/GCUZIRBHx2B9fP
-h0/29Yd4KRedaI3h59a5iVd0YYlevpwZMJwPURZl9En1b8ougwuZnwZj04OEja1h
-kBcCdwDIHlqCP/YIWhQo
-=5z2K
+iQEcBAEBCAAGBQJTTEzTAAoJEOeBhlrCAAWGmwQH/jeX1APtBDcHuN57AyR4NaX+
+NqKSrejV2l1SOpTI4TXFYDM6YUsXaYhNBpXVOLbLQv/iucshLyDXkReDe4O20ns4
+rnLuMRUMAhl6ttbU16jZRxyLyRTY4eKY3MrVuLf7kwEp8siyS2I/PEgC37TIzmyC
+3qcIWpzb6fTlpDYu3ww7jtJPicrtjVhxg43u/joqju1wCIUUav5JhLtd1yNxCTcC
+eQQM58NyUq6Pg3TMqZlbA3bT87Rjh97jhIxEL/erEAUPpe5/GV+IIEmLnBZr/oSY
+LAQlpq3PNzLkVSLL5hM66Z9SAU8chJVC3h3EMXneT3TWgS0UCBN4UTQR9hptcWQ=
+=BMqD
 -----END PGP SIGNATURE-----
