@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/llvm/llvm-9999.ebuild,v 1.84 2014/04/12 09:44:01 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/llvm/llvm-9999.ebuild,v 1.85 2014/04/14 21:01:56 ottxor Exp $
 
 EAPI=5
 
@@ -166,6 +166,11 @@ src_prepare() {
 	epatch "${FILESDIR}"/${PN}-3.2-nodoctargz.patch
 	epatch "${FILESDIR}"/${PN}-3.5-gentoo-install.patch
 	use clang && epatch "${FILESDIR}"/clang-3.5-gentoo-install.patch
+
+	if use prefix && use clang; then
+		sed -e "/^CFLAGS /s@-Werror@-I${EPREFIX}/usr/include@" \
+				-i 'projects/compiler-rt/make/platform/clang_linux.mk' || die
+	fi
 
 	local sub_files=(
 		Makefile.config.in
